--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "ally elvis nzeyimana",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
