--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,5 +16,9 @@
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-solid": "^2.11.6"
-  }
+  },
+  "description": "```bash $ npm install # or pnpm install or yarn install ```",
+  "main": "index.js",
+  "author": "ally elvis nzeyimana",
+  "license": "MIT"
 }
